@@ -126,8 +126,8 @@ MaxRequestsPerChild  0
 # MaxRequestsPerChild: maximum number of requests a server process serves
 <IfModule threaded.c>
 StartServers         3
-MaxClients           8
-MinSpareThreads      5
+MaxClients         150
+MinSpareThreads     25
 MaxSpareThreads     75 
 ThreadsPerChild     25
 MaxRequestsPerChild  0
